<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/country_flag"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/country_s_flag_desc"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/country_flag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Country Name" />

        <TextView
            android:id="@+id/total_dead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/country_name"
            app:layout_constraintStart_toStartOf="@+id/country_flag"
            app:layout_constraintTop_toBottomOf="@+id/country_name"
            tools:text="1100 dead" />

        <TextView
            android:id="@+id/new_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="742" />

        <TextView
            android:id="@+id/new_confirmed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newly_confirmed"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/new_confirmed"
            app:layout_constraintTop_toBottomOf="@+id/new_confirmed" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/total_dead"
            app:layout_constraintTop_toBottomOf="@+id/total_dead">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/up_gradient_bg">

                <View
                    android:id="@+id/chart1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.6"
                    android:background="@drawable/ic_graphic_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/total_confirmed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/chart1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="145" />

                <TextView
                    android:id="@+id/confirmed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:maxLines="1"
                    android:text="@string/confirmed"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/total_confirmed"
                    app:layout_constraintTop_toBottomOf="@+id/total_confirmed" />

                <View
                    android:id="@+id/view_confirmed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/ic_arrows_up"
                    app:layout_constraintEnd_toEndOf="@+id/total_confirmed"
                    app:layout_constraintStart_toEndOf="@+id/confirmed_label"
                    app:layout_constraintTop_toBottomOf="@+id/total_confirmed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/new_confirmed_label"
            app:layout_constraintTop_toBottomOf="@+id/new_confirmed_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/down_gradient_bg">

                <View
                    android:id="@+id/view2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.6"
                    android:background="@drawable/ic_graphic_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/total_recovered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="145" />

                <TextView
                    android:id="@+id/recovered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/recovered"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/total_recovered"
                    app:layout_constraintTop_toBottomOf="@+id/total_recovered" />

                <View
                    android:id="@+id/view_recovered"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/ic_arrows_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/total_recovered"
                    app:layout_constraintStart_toEndOf="@+id/recovered_label"
                    app:layout_constraintTop_toTopOf="@+id/recovered_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>