...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="ifContentScrolls"
...
                    android:text="@string/getting_summary_progrss_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countries_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
